src/runtime/tests/data/negative/compare-int-float.hsh
let x = 1
let y = 2.0
let result = x > y
